Fact 2712 (#1001)
* fixing test, adding mig for regions for sc and scottish ayr edge case

* warning notice migrating across